// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders default 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

<img
  className="c0"
/>
`;

exports[`<Img /> renders with theme 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(100%);
  filter: invert(100%);
}

<img
  className="c0"
/>
`;

exports[`<ImgInline /> renders default 1`] = `
.c0 {
  display: inline-block;
  width: auto;
  height: 2rem;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

<img
  className="c0"
/>
`;

exports[`<ImgInline /> renders with theme 1`] = `
.c0 {
  display: inline-block;
  width: auto;
  height: 2rem;
  -webkit-filter: invert(100%);
  filter: invert(100%);
}

<img
  className="c0"
/>
`;

exports[`renders default <ImgIcon /> 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

.c1 {
  width: 3rem;
}

<img
  className="c0 c1"
/>
`;
